tmux conf update.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
-# Setting the prefix from C-b to C-a
-set -g prefix C-a
+# powerline
+run-shell "powerline-daemon -q"
+source "$PIP_REPO/powerline/bindings/tmux/powerline.conf"
+
+# Setting the prefix from C-b to `
+set -g prefix `
 
 # Free the original C-b prefix keybinding
 unbind C-b
@@ -7,8 +11,8 @@ unbind C-b
 # setting the delay between prefix and command
 set -s escape-time 1
 
-# Ensure that we can send C-a to other apps
-bind C-a send-prefix
+# Ensure that we can send ` to other apps
+bind ` send-prefix
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
