tmux : escape-time 제거, mouse 추가 지원.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g prefix `
 unbind C-b
 
 # setting the delay between prefix and command
-set -s escape-time 1
+set -s escape-time 0
 
 # Ensure that we can send ` to other apps
 bind ` send-prefix
@@ -39,3 +39,6 @@ setw -g mode-keys vi
 
 # enable mouse
 set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
