--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# resizing panes
+bind -r C-h resize-pane -L
+bind -r C-j resize-pane -D
+bind -r C-k resize-pane -U
+bind -r C-l resize-pane -R
+
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
 
