tmux - Add clipboard fix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,11 +14,9 @@ set -s escape-time 0
 # Ensure that we can send ` to other apps
 bind ` send-prefix
 
-# Set the base index for windows to 1 instead of 0
-set -g base-index 1
+set -g base-index 1 # instead of 0
 
-# Set the base index for panes to 1 instead of 0
-setw -g pane-base-index 1
+setw -g pane-base-index 1 # instead of 0
 
 # Reload this file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -40,3 +38,7 @@ set -g default-terminal "screen-256color"
 
 # enable vi keys
 setw -g mode-keys vi
+
+# fix clipboard w/ macOS Sierra
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
