tmux - Set mouse on

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,8 @@ set -g default-terminal "screen-256color"
 # enable vi keys
 setw -g mode-keys vi
 
+set -g mouse on
+
 # fix clipboard w/ macOS Sierra
 set -g default-shell $SHELL
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
